--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -24,9 +24,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.SETUP_DOWNLOADS_DIR }}
-          key: ${{ runner.os }}-apptainer-${{ env.APPTAINER_VERSION }}0
+          key: ${{ runner.os }}-apptainer-${{ env.APPTAINER_VERSION }}
       - name: Install Apptainer
-        run: curl -o "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb) && sudo apt install -y "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb"; rm -f "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb"
+        run: curl -o "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb && sudo apt install -y "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb"
       - name: Check out code for the container build
         uses: actions/checkout@v4
       - name: Build Container
