--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Install Apptainer
         run: |
           set -eux
-          curl -o "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb && sudo apt install -y "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb"
+          curl -o "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb && \
+          sudo dpkg -i "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" \
+          sudo apt-get install -f -y
       - name: Check out code for the container build
         uses: actions/checkout@v4
       - name: Build Container
