--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -29,8 +29,7 @@ jobs:
         run: |
           set -eux
           curl -o "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb && \
-          sudo dpkg -i --ignore-depends "${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb" && \
-          sudo apt-get install -f -y
+          sudo apt install -y "./${SETUP_DOWNLOADS_DIR}/apptainer-${APPTAINER_VERSION}.deb"
       - name: Check out code for the container build
         uses: actions/checkout@v4
       - name: Build Container
