--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -2,8 +2,7 @@ name: Apptainer Build
 on:
   push:
     tags:
-      - latest
-      - v*
+      - "@*"
 
 jobs:
   build-and-push-image:
@@ -36,10 +35,4 @@ jobs:
         run: |
           apptainer build container.sif Singularity
         
-          # Build the container and name by tag
-          echo "Tag is \"$tag.\"" 
-          echo "tag=\"$tag\"" >> $GITHUB_ENV
-      - name: Login and Deploy Container
-        run: |
-          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} oras://ghcr.io
-          apptainer push container.sif oras://ghcr.io/${{ github.repository }}:${{github.ref_name}}
+          # Build the container alocontainer.sif oras://ghcr.io/${{ github.repository }}:${{github.ref_name}}
