--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -2,7 +2,7 @@ name: Apptainer Build
 on:
   push:
     tags:
-      - "@*"
+      - "*@*"
 
 jobs:
   build-and-push-image:
@@ -34,15 +34,19 @@ jobs:
       - name: Build Container
         run: |
           set -eux
-          apptainer build --fix-perms container.sif Singularity
+          apptainer build --fix-perms --force container.sif Singularity
+          echo "Container built successfully" >&2
+          du -h container.sif >&2
       - name: Push Container
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -eux
-          TAG=${{ github.ref_name }}
-          TAG=${TAG:-latest}
-          TAG="${TAG##*@}"
-          DST="oras://ghcr.io/${{ github.repository }}:${TAG}"
+          IMAGE_TAG=${{ github.ref_name }}
+          IMAGE_TAG=${IMAGE_TAG:-latest}
+          IMAGE_TAG="${IMAGE_TAG##*@}"
+          IMAGE_NAME=${{ github.ref_name }}
+          IMAGE_NAME="${IMAGE_NAME%%@*}"
+          DST="oras://ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}"
           echo "Pushing to \"${DST}\"" >&2
-          apptainer push container.sif "${DST}"
+          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} oras://ghcr.io
+          apptainer push -U container.sif "${DST}"
+          echo "Done" >&2
