--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -41,7 +41,11 @@ jobs:
           set -eux
           apptainer build --fix-perms --force container.sif Singularity
           echo "Container built successfully" >&2
+          echo "Container size:" >&2
           du -h container.sif >&2
+          echo "Container labels:" >&2
+          apptainer inspect container.sif >&2
+
       - name: Push Container
         run: |
           set -eux
