--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build Container
         run: |
           set -eux
-          apptainer build --fix-perms --force container.sif Singularity
+          apptainer build --disable-cache --fix-perms --force container.sif Singularity
           echo "Container built successfully" >&2
           echo "Container size:" >&2
           du -h container.sif >&2
