--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -48,7 +48,7 @@ jobs:
           IMAGE_TAG="${IMAGE_TAG##*@}"
           IMAGE_NAME=${{ github.ref_name }}
           IMAGE_NAME="${IMAGE_NAME%%@*}"
-          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} 
+          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}  oras://ghcr.io/${{ github.repository }}
           apptainer push -U "${IMAGE_PATH}" "${DST}" oras://ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}"
           if [[ "${IMAGE_TAG}" != "latest" ]]; 
             oras login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
