--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           set -eux
           IMAGE_PATH="$(basename ${PWD})".sif
-          apptainer build --disable-cache --force "${IMAGE_PATH}" Singularity
+          apptainer build --nv --fix-perms --disable-cache --force "${IMAGE_PATH}" Singularity
           echo "Container built successfully" >&2
           echo "Container size:" >&2
           du -h "${IMAGE_PATH}" >&2
