--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -3,6 +3,15 @@ on:
   push:
     tags:
       - "*@*"
+
+defaults:
+  run:
+    shell: bash
+
+env:
+  APPTAINER_VERSION: 1.2.5
+  ORAS_VERSION: 1.1.0
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -13,8 +22,7 @@ jobs:
     steps:
       - name: Download Apptainer
         run: |
-          set -eux
-          APPTAINER_VERSION="${APPTAINER_VERSION:-1.2.5}"
+          set -eux -o pipefail
           curl -o "apptainer-${APPTAINER_VERSION}.deb" -L https://github.com/apptainer/apptainer/releases/download/v${APPTAINER_VERSION}/apptainer_${APPTAINER_VERSION}_amd64.deb
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update -yq  || echo "Couldn't update apt packages. Will attempt installation without update" >&2
@@ -22,8 +30,7 @@ jobs:
           apptainer >&2 --version && echo >&2 "Apptainer installed successfully!"
       - name: Install ORAS
         run: |
-          set -eux
-          ORAS_VERSION="${ORAS_VERSION:-1.1.0}"          
+          set -eux -o pipefail
           curl -o "oras_${ORAS_VERSION}.tar.gz" -L "https://github.com/oras-project/oras/releases/download/v${ORAS_VERSION}/oras_${ORAS_VERSION}_linux_amd64.tar.gz"
 
           # Install the executable:
@@ -33,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build Container
         run: |
-          set -eux
+          set -eux -o pipefail
           IMAGE_PATH="$(basename ${PWD})".sif
           apptainer build --nv --fix-perms --disable-cache --force "${IMAGE_PATH}" Singularity
           echo "Container built successfully" >&2
@@ -44,16 +51,31 @@ jobs:
           echo "IMAGE_PATH=${IMAGE_PATH}" >> $GITHUB_ENV
       - name: Push Container
         run: |
-          set -eux
+          set -eux -o pipefail
           IMAGE_TAG=${{ github.ref_name }}
           IMAGE_TAG=${IMAGE_TAG:-latest}
-          IMAGE_TAG="${IMAGE_TAG##*@}"
+
+          if [ -n "${IMAGE_TAG:-}" ]; then
+              IMAGE_TAG="${IMAGE_TAG##*@}"
+              IMAGE_TAG="${IMAGE_TAG##*v}"
+          else
+              IMAGE_TAG="latest"
+              echo "No tag found, defaulting to 'latest'" >&2
+          fi
+
           IMAGE_NAME=${{ github.ref_name }}
           IMAGE_NAME="${IMAGE_NAME%%@*}"
-          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}  oras://ghcr.io
+
+          # Log in:
+          apptainer remote login -u ${{ github.actor }} -p ${{ github.token }} oras://ghcr.io
+          oras login -u ${{ github.actor }} -p ${{ github.token }} ghcr.io
+
+          # Push the image:
           apptainer push -U "${IMAGE_PATH}" oras://ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}
-          if [[ "${IMAGE_TAG}" != "latest" ]]; 
-            oras login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
+
+          # Tag the image as latest if it's not a pre-release:
+            
+          if [[ "${IMAGE_TAG}" != "latest" ]] && [[ ! "${IMAGE_TAG}" =~ ^[0-9]+\.[0-9]+\.[0-9]+-.+$ ]]; then
             oras tag ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG} latest
           fi
           echo "Done" >&2
