--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -17,8 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Apptainer image
     permissions:
-        contents: read
+        contents: write
         packages: write
+
     steps:
       - name: Download Apptainer
         run: |
@@ -28,6 +29,8 @@ jobs:
           sudo apt-get update -yq  || echo "Couldn't update apt packages. Will attempt installation without update" >&2
           sudo dpkg --install --force-depends "apptainer-${APPTAINER_VERSION}.deb" && sudo apt-get install --fix-broken --yes --quiet
           apptainer >&2 --version && echo >&2 "Apptainer installed successfully!"
+          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} oras://ghcr.io && echo "Logged in to remote registry successfully" >&2
+
       - name: Install ORAS
         run: |
           set -eux -o pipefail
@@ -36,8 +39,11 @@ jobs:
           # Install the executable:
           tar -xvf oras_${ORAS_VERSION}.tar.gz && chmod +x oras && sudo mv oras /usr/local/bin/oras
           sudo mv "${DOWNLOAD_PATH}" /usr/local/bin/oras && sudo chmod +x /usr/local/bin/oras & oras >&2 version && echo >&2 "oras installed successfully!"
+          oras login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} ghcr.io && echo "Logged in to remote registry successfully" >&2
+
       - name: Check out code for the container build
         uses: actions/checkout@v4
+
       - name: Build Container
         run: |
           set -eux -o pipefail
@@ -49,33 +55,27 @@ jobs:
           echo "Container labels:" >&2
           apptainer inspect "${IMAGE_PATH}" >&2
           echo "IMAGE_PATH=${IMAGE_PATH}" >> $GITHUB_ENV
+          
       - name: Push Container
         run: |
           set -eux -o pipefail
-          IMAGE_TAG=${{ github.ref_name }}
-          IMAGE_TAG=${IMAGE_TAG:-latest}
-
-          if [ -n "${IMAGE_TAG:-}" ]; then
-              IMAGE_TAG="${IMAGE_TAG##*@}"
-              IMAGE_TAG="${IMAGE_TAG##*v}"
-          else
-              IMAGE_TAG="latest"
-              echo "No tag found, defaulting to 'latest'" >&2
+          
+          if [[ "${GITHUB_REF_TYPE:-}" == "tag" ]] && [[ "${GITHUB_REF}" =~ ^.*@.*$ ]]; then
+              [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REF%%@*}"
+              [[ -z "${IMAGE_TAG:-}" ]] && IMAGE_TAG="${GITHUB_REF##*@}" && IMAGE_TAG="${IMAGE_TAG##*v}"
           fi
 
-          IMAGE_NAME=${{ github.ref_name }}
-          IMAGE_NAME="${IMAGE_NAME%%@*}"
-
+          [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REPOSITORY##*/}"
+          [[ -z "${IMAGE_TAG:-}" ]] && IMAGE_TAG="$(date +%s)"
+        
           # Log in:
-          apptainer remote login -u ${{ github.actor }} -p ${{ github.token }} oras://ghcr.io
-          oras login -u ${{ github.actor }} -p ${{ github.token }} ghcr.io
+          apptainer remote login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} oras://ghcr.io
 
           # Push the image:
           apptainer push -U "${IMAGE_PATH}" oras://ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}
 
           # Tag the image as latest if it's not a pre-release:
-            
           if [[ "${IMAGE_TAG}" != "latest" ]] && [[ ! "${IMAGE_TAG}" =~ ^[0-9]+\.[0-9]+\.[0-9]+-.+$ ]]; then
-            oras tag ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG} latest
+            oras tag -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} ghcr.io/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG} latest
           fi
           echo "Done" >&2
