--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -55,13 +55,13 @@ jobs:
           echo "Container labels:" >&2
           apptainer inspect "${IMAGE_PATH}" >&2
           echo "IMAGE_PATH=${IMAGE_PATH}" >> $GITHUB_ENV
-          
+
       - name: Push Container
         run: |
           set -eux -o pipefail
           
           if [[ "${GITHUB_REF_TYPE:-}" == "tag" ]] && [[ "${GITHUB_REF}" =~ ^.*@.*$ ]]; then
-              [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REF%%@*}"
+              [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REF%%@*}" && IMAGE_NAME="${IMAGE_NAME##refs/tags/}"
               [[ -z "${IMAGE_TAG:-}" ]] && IMAGE_TAG="${GITHUB_REF##*@}" && IMAGE_TAG="${IMAGE_TAG##*v}"
           fi
 
