--- a/.github/workflows/apptainer-image.yml
+++ b/.github/workflows/apptainer-image.yml
@@ -47,14 +47,43 @@ jobs:
       - name: Build Container
         run: |
           set -eux -o pipefail
-          IMAGE_PATH="$(basename ${PWD})".sif
+          if [[ "${GITHUB_REF_TYPE:-}" == "tag" ]] && [[ "${GITHUB_REF}" =~ ^.*@.*$ ]]; then
+              [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REF%%@*}" && IMAGE_NAME="${IMAGE_NAME##refs/tags/}"
+              [[ -z "${IMAGE_TAG:-}" ]] && IMAGE_TAG="${GITHUB_REF##*@}" && IMAGE_TAG="${IMAGE_TAG##*v}"
+          fi
+
+          [[ -z "${IMAGE_NAME:-}" ]] && IMAGE_NAME="${GITHUB_REPOSITORY##*/}"
+          [[ -z "${IMAGE_TAG:-}" ]] && IMAGE_TAG="$(date +%s)"
+
+          if [[ -d "${IMAGE_NAME}" ]] && [[ -f "${IMAGE_NAME}/Singularity" ]]; then
+            cd "${IMAGE_NAME}"
+            echo "Using Singularity file in ${PWD}" >&2
+          elif [[ -f Singularity ]]; then
+            echo "Using Singularity file in root directory" >&2
+          else
+            echo "No Singularity file found in \"${IMAGE_NAME:-}\" or root directory" >&2
+            exit 1
+          fi
+          
+          IMAGE_PATH="${GITHUB_WORKSPACE}/${IMAGE_NAME}".sif
+
+          echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+          echo "IMAGE_PATH=${IMAGE_PATH}" >> $GITHUB_ENV
+
+          echo "IMAGE_NAME=${IMAGE_NAME}" >&2
+          echo "IMAGE_TAG=${IMAGE_TAG}" >&2
+          echo "IMAGE_PATH=${IMAGE_PATH}" >&2
+        
           apptainer build --nv --fix-perms --disable-cache --force "${IMAGE_PATH}" Singularity
+          
           echo "Container built successfully" >&2
+          
           echo "Container size:" >&2
           du -h "${IMAGE_PATH}" >&2
+          
           echo "Container labels:" >&2
           apptainer inspect "${IMAGE_PATH}" >&2
-          echo "IMAGE_PATH=${IMAGE_PATH}" >> $GITHUB_ENV
 
       - name: Push Container
         run: |
