--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -8,10 +8,6 @@ on:
       - .github/workflows/scripts/esh
       - .github/workflows/build-documentation.yml
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -23,10 +19,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: Build documentation and installer in one step
-        id: update-docs-and-installer
         run: |
+          set -x
           commit_msg=""
-          ${GITHUB_WORKSPACE}/.github/workflows/scripts/esh README.md.esh > "${GITHUB_WORKSPACE}/README.md"            
+          ${GITHUB_WORKSPACE}/.github/workflows/scripts/esh  ${GITHUB_WORKSPACE}/README.md.esh > "${GITHUB_WORKSPACE}/README.md"            
           git config --local user.email "${{ github.event.sender.id }}+${{ github.event.sender.login }}@users.noreply.github.com"
           git config --local user.name ${{ github.event.sender.login }}
 
