Update doc workflow

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Build documentation and installer in one step
+      - name: Build documentation
         shell: bash
         run: |
           set -eux -o pipefail
@@ -31,7 +31,6 @@ jobs:
           # Stage files:
           git add README.md runscript.help
           
-  
           # Build additions to commit message:
           commit_args=()
 
